--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -7,6 +7,28 @@
   publisher={Academic press}
 }
 
+@misc{lubrizol,
+  title = {Biopharmaceutical Classification System},
+  author = {{Lubrizol Life Science}}, 
+  year = {2019}, 
+  howpublished = {\url{https://3ehzg6104228bwtte1se19g6-wpengine.netdna-ssl.com/wp-content/uploads/2019/10/TB-28-Biopharmaceutical-Classification-System.pdf}},
+  note = {Accessed: 2023-09-13}
+}
+
+@misc{everythingadme,
+  title = {Everything you need to know about ADME, 5th Edition},
+  author = {{Cyprotex}}, 
+  year = {2022}, 
+  note = {Accessed: 2023-09-13}
+}
+
+@phdthesis{alskar2018improved,
+  title={Improved Molecular Understanding of Lipid-Based Formulations: for Enabling Oral Delivery of Poorly Water-Soluble Drugs},
+  author={Alsk{\"a}r, Linda C},
+  year={2018},
+  school={Acta Universitatis Upsaliensis}
+}
+
 # 03.Rmd ----
 
 @article{liu2014rational,
@@ -24,14 +46,14 @@
 
 @article{studies2020cytochrome,
   title={Cytochrome P450 Enzyme-and Transporter-Mediated Drug Interactions Guidance for Industry US Department of Health and Human Services},
-  author={Studies, In Vitro Drug Interaction},
+  author={{In Vitro Drug Interaction Studies}},
   journal={Food and Drug Administration, Center for Drug Evaluation and Research (CDER)},
   year={2020}
 }
 
 @misc{european2012guideline,
   title={Guideline on the investigation of drug interactions},
-  author={European Medicines Agency},
+  author={{European Medicines Agency}},
   journal={Committee for Human Medicinal Products (CHMP)},
   year={2012},
   publisher={European Medicines Agency London, United Kingdom}
