--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: |
   <center> 신약개발을 위한 실전 약동학 II</center>
   <center> (ADME의 기초 자료)  </center>
 #"신약개발을 위한 실전 약동학\newline(I-이론과 자료해석)"\index{약동학}
-author: "가톨릭대학교 계량약리학연구소(PIPET), AIMS BioScience, Q-fitter - Ver 0.0.1"
+author: "가톨릭대학교 계량약리학연구소(PIPET), AIMS BioScience v0.2 (2023-10-16)"
 #author: "가톨릭대학교 계량약리학연구소(PIPET) 임동석, 한승훈, 한성필, 최수인 - Ver 1.1.0 (2022-05-13)"
 #date: "Ver. `r gsub('-', '', Sys.Date())`"
 date: "`r Sys.Date()`"
@@ -83,7 +83,7 @@ Sys.setenv(RSTUDIO_PDFLATEX = "latexmk")
 
 <!--`r if (knitr::is_html_output()) ' [<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" alt="표지" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)'`-->
 
-[<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)
+`r if (knitr::is_html_output()) '[<img src="images/cover-pdf.jpg" style="max-width:40%;min-width:80px;float:right;margin: 10px 10px 5px 5px" />](https://pipetcpt.github.io/pharmapk2/pharmapk2.pdf)'`
 
 \normalsize
 
@@ -119,8 +119,6 @@ Sys.setenv(RSTUDIO_PDFLATEX = "latexmk")
 그러므로 학생들의 책값 부담을 덜어주기 위해 책 전체를 웹북과 pdf로 온라인 상에 공개하였습니다. ^[http://pipet.or.kr/books/pharmapk2]
 종이책은 print on demand 방식으로 출판하면서 저자들은 인세를 받지 않음으로써 복사/제본비 수준의 책값을 책정하였습니다. 
 
-이를 위해 원고 집필 뿐 아니라 책의 조판에까지 많은 시간과 수고를 쏟아야 했던 한성필 교수님께 고마움을 전합니다. 
-
 이 책과 강의동영상이 우리나라에서 신약의 비임상, 임상개발 과정에 참여하고 있는 각 분야 전문가들의 역량을 더욱 잘 발휘할 수 있게 돕는 디딤돌이 된다면 저자들 모두의 기쁨이겠습니다.
 \index{임상개발}
 
@@ -130,7 +128,7 @@ include_graphics("images/preface.pdf")
 ```
 -->
 
-\hfill 2022년 9월, 성의교정 연구실에서
+\hfill 20XX년 9월, 성의교정 연구실에서
 
 \hfill 대표저자 임동석 拜
 
