--- a/bib/pharmapk.bib
+++ b/bib/pharmapk.bib
@@ -24,7 +24,7 @@
 
 @phdthesis{alskar2018improved,
   title={Improved Molecular Understanding of Lipid-Based Formulations: for Enabling Oral Delivery of Poorly Water-Soluble Drugs},
-  author={Alsk{\"a}r, Linda C},
+  author={Alskar, Linda C},
   year={2018},
   school={Acta Universitatis Upsaliensis}
 }
