--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,8 @@
 --- 
 title: |
   <center> 신약개발을 위한 실전 약동학 II</center>
-  <center> (ADME의 기초 자료)  </center>
-#"신약개발을 위한 실전 약동학\newline(I-이론과 자료해석)"\index{약동학}
+  <center> (흡수, 분포, 대사, 배설의 기초)  </center>
 author: "가톨릭대학교 계량약리학연구소(PIPET), AIMS BioScience v0.2 (2023-10-16)"
-#author: "가톨릭대학교 계량약리학연구소(PIPET) 임동석, 한승훈, 한성필, 최수인 - Ver 1.1.0 (2022-05-13)"
 #date: "Ver. `r gsub('-', '', Sys.Date())`"
 date: "`r Sys.Date()`"
 documentclass: krantz
@@ -13,7 +11,7 @@ linestretch: 1.30 # https://github.com/jgm/pandoc/issues/5179
 #mainfont: NanumMyeongjo
 knit: "bookdown::render_book"
 site: bookdown::bookdown_site
-description: "약동학은 신약의 발견부터 시판허가 이후의 관리에 이르기까지 모든 단계에서 쓰이는 가장 기본적이고 필수적인 지식이며 도구입니다. 저자들은 지난 20여년간 대학과 기업의 연구원들을 대상으로 약동학을 가르치며 겪은 학습자들의 질문과 반응들을 토대로 꼭 필요한 내용들을 이해하기 쉽게 설명하고자 영상 제작과 함께, 이 교재를 만들게 되었습니다. 약동학 책이라면 흔히 떠올리는, 맥락을 알 수 없는 미분방정식들로 가득 찬 책이 아니라, 학위과정 중에 약동학을 공부할 기회가 없었던 제약/바이오 연구자 분들도 정독하면 이해할 수 있는 책이 될 수 있도록 꼭 필요한만큼의 수식들만 넣었습니다. 대신 약동학 파라미터들 각자의 의미와 해석, 자칫하면 오해하거나 혼동하기 쉬워서 주의할 측면 등을 독자들을 위해 드러내고자 하였습니다."
+description: "1권에서 소개된 기본원리에 이어, 실전약동학 2에서는 혈장농도의 시간에 따른 변화를 일으키는 근본이라 할 수 있는 흡수, 분포, 대사, 배설 과정들을 시험관내 실험이나 동물실험 데이터를 통해 파악하고 이를 이용하여 사람에서의 약동학을 예측하는 방법론을 소개하였습니다. 신약으로 개발되는 물질의 종류는 핵산, 단백질, 각종 세포들에 이르기까지 다양하게 확대되었지만 지금까지 확립된 방법론을 소개하기 위해 소분자의약품을 기준으로 서술하였습니다. 저자들은 신약개발의 일선에서 오랫동안 활약해온 전문가들로서 날마다 쓰이고 있는 연구방법들을 이론과 함께 서술하여 독자의 이해를 돕고자 하였습니다."
 url: 'http\://pipet.or.kr/books/pharmapk2'
 github-repo: pipetcpt/pharmapk2
 cover-image: images/cover-pdf.jpg
@@ -87,40 +85,16 @@ Sys.setenv(RSTUDIO_PDFLATEX = "latexmk")
 
 \normalsize
 
-이 책은 제약·바이오 업계의 신약 연구자들이 약동학(pharmacokinetics)을 이해하는 것을 돕기 위해 만들어졌습니다.\index{약동학}
+(To be determined)
 
-\index{약동학}\index{약동학}\index{약력학} \index{임상개발} \index{의사결정}
-약동학은 신약의 발견부터 시판허가 이후의 관리에 이르기까지 모든 단계에서 쓰이는 가장 기본적이고 필수적인 지식이며 도구입니다. 
-오늘날 다양한 생명과학 분야의 전문인력들이 우리나라에서 신약의 발견과 초기개발과정, 임상개발 과정에서 핵심적인 역할들을 수행하고 있습니다. 
-그러나 학위과정 중에 약동학이나 약력학을 공부할 기회가 없었던 분들이 많아서 업무 수행 중 의사결정이나 소통에 있어서 늘 크고 작은 어려움을 겪고 있습니다. 
-이런 현실은 본격적인 신약개발의 역사가 일천한 우리나라에서 거쳐갈 수밖에 없는 과정이지만, 소수의 전문가들이 제약회사에 가서 강의 몇시간 하는 식으로는 해결되지 않습니다.
+I권에서 소개된 기본원리에 이어, "신약개발을 위한 실전 약동학 II (흡수, 분포, 대사, 배설의 기초)"에서는 혈장농도의 시간에 따른 변화를 일으키는 근본이라 할 수 있는 흡수, 분포, 대사, 배설 과정들을 시험관내 실험이나 동물실험 데이터를 통해 파악하고 이를 이용하여 사람에서의 약동학을 예측하는 방법론을 소개하였습니다. 신약으로 개발되는 물질의 종류는 핵산, 단백질, 각종 세포들에 이르기까지 다양하게 확대되었지만 지금까지 확립된 방법론을 소개하기 위해 소분자의약품을 기준으로 서술하였습니다. 저자들은 신약개발의 일선에서 오랫동안 활약해온 전문가들로서 날마다 쓰이고 있는 연구방법들을 이론과 함께 서술하여 독자의 이해를 돕고자 하였습니다.
 
-물론 '임상약동학' 또는 '약동학' 이라는 제목의 좋은 책들은 이미 국내에도\index{약동학}
-여러 권 나와 있습니다. 그러나 약동학 데이터를 직접 들여다보고 분석하는\index{약동학}
-학문(임상약리학, 약제학 등)을 대학원에서 전공하지 않은 이상, 그 두꺼운 교재들의 복잡한 수식을 다 읽어야 할 절박함도 없을 것이고, 설혹 읽어본다
-한들 쉽게 이해할 수도 없습니다. 
-또한 많은 책들이 약동학 수식들을 충실히\index{약동학}
-다루고는 있지만 신약을 실제로 개발하는 과정에서 제약사 연구원들이 부딪히는 의문들을 해결하는데 주안점을 두고 저술된 것이 아니므로 현장의 답답함을 풀어주는 데에는 한계가 있어왔습니다.
-
-이런 현실을 조금이라도 타개하기 위해서는 국내 제약, 바이오 기업에서 신약개발 업무를 수행하고 있는 다양한 전공의 연구자들이 시공간의 제약없이 공부할 수 있는 온라인 강의 동영상, 그리고 그와 함께 읽을 수 있는 교재를 만드는 작업이 절실하였습니다. 
-그래서 저자들은 지난 20여년간 대학과 기업의 연구원들을 대상으로 약동학을 가르치며 겪은 학습자들의 질문과 반응들을 토대로 꼭 필요한 내용들을 이해하기 쉽게 설명하고자 영상 제작과 함께, 이 교재를 만들게 되었습니다. ^[http://pipetlms.or.kr] 
-
-저자들은 "약동학"이라는 방법론 자체를 전공했다기 보다는 그것을 기본적인\index{약동학}
-도구로 사용하는 학문인 임상약리학을 공부해 온 사람들입니다. 이 책에 담긴
-지식들 중 저자들이 새롭게 만들어낸 것은 거의 없으므로 이 책은 오랜 세월
-동안 세상의 많은 학자들이 만들어 온 지식들을 모아서 시중에 유통시킨 것에
-지나지 않습니다. 다만 신약개발을 위해 임상약리학을 적용하는 과정에서,
-함께 일해왔던 기업들에서 만들어진 물질들의 약효, 독성, 약동학에 관한\index{약동학}
-비임상, 임상 연구자료들을 들여다보면서 수없이 토의하고 질문했던 내용들을
-책 속에 충실히 반영하고자 하였습니다. 그 내용을 독자들이 좀 더
-효율적으로 학습할 수 있도록 오래된 지식들을 새로운 방식으로 자르고 묶고
-다듬어 내놓고자 노력했습니다. 약동학 책에는 수식들이 꽤 등장하기 때문에, 이 책의 내용 역시 어렵게 느껴질 수 있으므로 온라인상에 공개되어 있는 강의 동영상을 책과 함께 공부하시기를 권합니다. 
 이 책은 제약/바이오 기업의 연구자를 대상으로 쓰여진 것이지만, 관련된 전공을 공부하는 대학원생들에게도 도움이 될 것입니다.
 그러므로 학생들의 책값 부담을 덜어주기 위해 책 전체를 웹북과 pdf로 온라인 상에 공개하였습니다. ^[http://pipet.or.kr/books/pharmapk2]
 종이책은 print on demand 방식으로 출판하면서 저자들은 인세를 받지 않음으로써 복사/제본비 수준의 책값을 책정하였습니다. 
 
 이 책과 강의동영상이 우리나라에서 신약의 비임상, 임상개발 과정에 참여하고 있는 각 분야 전문가들의 역량을 더욱 잘 발휘할 수 있게 돕는 디딤돌이 된다면 저자들 모두의 기쁨이겠습니다.
-\index{임상개발}
+
 
 <!--
 ```{r include = !is_html_output()}
@@ -128,9 +102,9 @@ include_graphics("images/preface.pdf")
 ```
 -->
 
-\hfill 20XX년 9월, 성의교정 연구실에서
+\hfill 2023년 12월, 성의교정 연구실에서
 
-\hfill 대표저자 임동석 拜
+\hfill 대표저자 임동석
 
 \normalsize
 
